order adjustment padding and overflow fix

--- a/public/css/invoice.css
+++ b/public/css/invoice.css
@@ -321,6 +321,8 @@ dl > dt {
 }
 
 .order-adjustment .adjustment-amount-wrapper {
+  box-sizing: border-box;
+  min-width: 260px;
   text-align: right;
 }
 
